dnl Process this file with autoconf to produce a configure script.
AC_INIT(phase1.awk)
AC_PROG_CC
AC_PROG_AWK
if test $AWK = ""; then
	echo You do not have an awk interpreter installed. Sorry.
else
	echo -e "#! /bin/sh" > temp
	echo -e "AWK=$AWK" >> temp
	cat temp analyse.pre > analyse.sh
	chmod +x analyse.sh
	rm temp
fi
AC_OUTPUT(Makefile)
 