dnl Process this file with autoconf to produce a configure script.
AC_INIT(rawdump.c)
AC_PROG_CC
AC_PROG_AWK
if test $AWK = ""; then
	echo You do not have an awk interpreter installed. Sorry.
else
	echo -e "#! /bin/sh\nAWK=$AWK" > temp
	cat temp report.pre > report.sh
	chmod +x report.sh
	rm temp
	echo -e "#!/bin/$AWK -f -" > temp
	cat temp histogrammer.pre > histogrammer
	rm temp
fi
AC_OUTPUT(Makefile)
 